--- a/js snack ricetta/index.html
+++ b/js snack ricetta/index.html
@@ -5,14 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>snack spesa</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <ul id="ingredients_list">
-        
+
     </ul>
     <section class="form">
         <input type="text" name="ingredient" id="ingredient" placeholder="inserisci un ingredinte">
         <button id="addIngredient">Aggiungi</button>
+        <button id="dish">Genera Piatto</button>
+        <div id="dish_img">
+            <img src="https://images.unsplash.com/photo-1602253057119-44d745d9b860?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1026&q=80" alt="dish img">
+        </div>
     </section>
     <script src="script.js"></script>
 </body>
